tests/errors/test_29.xpp
// Can't initialise variable without type or value

fn main() void {
    let x;
}